--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <div class="left"></div>
             <div class="right">
                 <div class="title">PERFUME</div>
-                <div class="heading">All<br/>shadesof_<br/>fragrances</div>
-                <div class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, autem sunt voluptatem molestias quo reprehenderit.</div>
+                <div class="heading">All<br/>shadesofs_<br/>fragrances</div>
+                <div class="description">Lorem ipsumssdd dolor sit amet consectetur adipisicing elit. Iusto, autem sunt voluptatem molestias quo reprehenderit.</div>
                 <div class="price">$149.99<span>$469.99</span></div>
                 <button class="add-to-cart">
                     <i class="fa fa-shopping-cart fa-lg" style="color: white;"></i>
