--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="left"></div>
             <div class="right">
-                <div class="title">PERFUME</div>
+                <div class="title">PERFUME and oil</div>
                 <div class="heading">All<br/>shadesof_<br/>fragrances</div>
                 <div class="description">Lorem ipsums dolor sit amet consectetur adipisicing elit. Iusto, autem sunt voluptatem molestias quo reprehenderit.</div>
                 <div class="price">$149.99<span>$469.99</span></div>
